[package]
name = "model-server"
description = "An attempt to make a simple ONNX model server in Rust"
keywords = ["runtime"]
categories = ["ml"]
version = "0.1.0"
edition = "2021"

[[bin]]
name = "model-server"
path = "src/main.rs"

[lib]
crate-type = ["cdylib"]
bench = false
path = "src/lib/lib.rs"


[dependencies]
tokio = { version = "1", features = ["full"] }
csv = "1.1"
rand = "0.8.5"
itertools = "0.10"
actix-web = "4"
onnxruntime = "0.0.14"
ndarray = "*"
ndarray-rand = "*"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
anyhow = "^1"
#reqwest = "^0.11"